# aura

./: .cursorignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  malachite  rustfmt.toml
.github/workflows/: codeql.yml  devskim.yml  multi-node-smoke-test.yml  rust.yml
aura/: Cargo.toml
aura-cli/: Cargo.toml
aura-cli/src/: main.rs
aura-core/: Cargo.toml
aura-core/src/: address.rs  crypto.rs  error.rs  genesis.rs  keys.rs  lib.rs  note.rs  transaction.rs  zkp.rs
aura-core/tests/: zkp.rs
aura-node-lib/: Cargo.toml
aura-node-lib/src/: application.rs  config.rs  lib.rs  node.rs  rpc.rs  state.rs
aura-node-lib/tests/: app_message_loop.rs  state.rs  state_tests.rs
aura-wallet-lib/: Cargo.toml
aura-wallet-lib/src/: lib.rs
aura/src/: config.rs  main.rs  node_cmd.rs  utils_cmd.rs  wallet_cmd.rs
devnet/: genesis.json  malachite.toml
