[package]
name = "aura-core"
version = "0.1.0"
edition = "2024"   # Using Rust 2024 edition

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "2.0.12"
bech32 = "0.11.0"                                  # Current stable is ~1.0.58
anyhow = "1.0"
# rand 0.8.5 (using rand_core 0.6.x) is typically compatible with arkworks 0.4.x and often 0.5.x too.
# Verify if arkworks 0.5.0 has moved to a newer rand_core. If not, 0.8.5 is safe.
rand = "0.9.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] } # Latest stable

# Hashing
sha2 = "0.10.8"
blake2 = "0.10.6"


# Seed phrases and key derivation
bip39 = "2.1.0"

# Arkworks ZKP Suite (Targeting 0.5.0 line)
# Ensure these versions are actually released and compatible on crates.io
ark-ff = { version = "0.5.0", default-features = false, features = [
    "std",
    "asm",
] }
ark-ec = { version = "0.5.0", default-features = false, features = ["std"] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [
    "curve",
    "std",
] } # Assumes bls12-381 is also 0.5.0
ark-relations = { version = "0.5.0", default-features = false, features = [
    "std",
] }
ark-r1cs-std = { version = "0.5.0", default-features = false, features = [
    "std",
] }
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = [
    "std",
    "crh",
    "sponge",
    "merkle_tree",
    "encryption",
] } # Added "encryption" just in case
ark-groth16 = { version = "0.5.0", default-features = false, features = [
    "r1cs",
    "std",
] }
ark-snark = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
    "std",
] }
ark-std = { version = "0.5.0", default-features = false, features = [
    "std",
    "parallel",
] }

# Tracing for logging (optional)
tracing = { version = "0.1", optional = true }

# These seem less like core crypto lib dependencies and more app/CLI level.
# If aura-core doesn't directly use them, move to aura/Cargo.toml.
# toml = "0.8.12"
# shellexpand = "3.1.0"

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-bls12-381/std",
    "ark-relations/std",
    "ark-r1cs-std/std",
    "ark-crypto-primitives/std",
    "ark-groth16/std",
    "ark-serialize/std",
    "ark-std/std",
    "dep:tracing",               # Enable tracing when std is enabled
]
mock-zkp = []
parallel = ["ark-std/parallel"]
