[package]
name = "aura-node-lib"
version = "0.1.0"
edition = "2024"       # Matching your workspace

[dependencies]
# Aura Core
aura-core = { path = "../aura-core" }

# Malachite BFT - Using specific commit 2e950b5
malachitebft-app = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-app" }
malachitebft-core-types = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-core-types" }
malachitebft-engine = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-engine" }
malachitebft-config = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-config" }
malachitebft-core-consensus = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-core-consensus" }
malachitebft-app-channel = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-app-channel" }
malachitebft-test = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-test" }
malachitebft-peer = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-peer" }
libp2p = { version = "0.55.0", default-features = false, features = [
    "macros",
    "ed25519",
    "tokio",
] } # Example: minimal set for identity types
toml = "0.8.22"

# State Storage
redb = "2.1.0"    # Or latest stable version
hex = "0.4.3"
chrono = "0.4.37" # For timestamp handling
eyre = "0.6.12"

# Async
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",            # for Mutex etc.
    "time",            # for sleep in simulation loop
] }
async-trait = "0.1.77" # Malachite's app trait might be async

# Utilities
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"                                    # Using sha2, removed separate sha256
once_cell = "1.19.0"                               # For Lazy statics
bytes = "1"
sha3 = "0.10"

[dev-dependencies]
tempfile = "3"
malachitebft-signing-ed25519 = { git = "https://github.com/informalsystems/malachite", rev = "696fa1c", package = "informalsystems-malachitebft-signing-ed25519", features = ["rand"] }
rand = "0.9"

# RPC (Example: jsonrpsee, choose one)
# jsonrpsee = { version = "0.22", features = ["full"] , optional = true }
# actix-web = { version = "4", optional = true }


[features]
default = []
# rpc-server = ["dep:jsonrpsee"] # Example feature for enabling RPC
