[package]
name = "aura"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8.22"
shellexpand = "3.1.1"
anyhow = "1.0"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
] } # For async main if needed
config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
rand = "0.9"
futures = "0.3"
bech32 = "0.11"
attohttpc = { version = "0.24", default-features = false }

# Workspace dependencies
aura-node-lib = { path = "../aura-node-lib" }
aura-wallet-lib = { path = "../aura-wallet-lib" } # Keep for future use
aura-core = { path = "../aura-core" }
ark-std = "0.5.0"

[dev-dependencies]
# For integration tests later
